plugins {
    id 'java'
    id 'application'
}

group 'fr.benco11'
version '1.0'

targetCompatibility = sourceCompatibility = 17
compileJava.options.encoding = 'UTF-8'

archivesBaseName = 'JavaQuarium'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

application {
    mainClass = "fr.benco11.javaquarium.JavaQuarium"
}

jar {
    manifest {
        attributes 'Main-Class': application.mainClassName
    }
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}
